# cpp_design_patterns

./: build.py
code/: CMakeLists.txt
code/abstractFactory/: CMakeLists.txt
code/abstractFactory/inc/: Vehicle.hpp  VehicleCreator.hpp  VehicleProvider.hpp
code/abstractFactory/src/: VehicleProvider.cpp  main.cpp
code/abstractFactory/uml/: abstract_factory.drawio
code/adapter/: CMakeLists.txt
code/adapter/inc/: Car.hpp  CarAdapterAggregation.hpp  CarAdapterInheritance.hpp  Chopper.hpp  Motorcycle.hpp  Workshop.hpp
code/adapter/src/: main.cpp
code/adapter/uml/: adapter_aggregation.drawio  adapter_inheritance.drawio
code/bridge/: CMakeLists.txt
code/bridge/inc/: Car.hpp  CompanyOwner.hpp  Motorcycle.hpp  Owner.hpp  PersonalOwner.hpp  Vehicle.hpp
code/bridge/src/: main.cpp
code/bridge/uml/: bridge.drawio
code/builder/: CMakeLists.txt
code/builder/inc/: Car.hpp  CarBuilder.hpp
code/builder/src/: main.cpp
code/builder/uml/: builder.drawio
code/chainOfResponsibility/: CMakeLists.txt
code/chainOfResponsibility/inc/: Car.hpp  Engine.hpp  EngineMechanic.hpp  Mechanic.hpp  Part.hpp  Transmission.hpp  TransmissionMechanic.hpp  Workshop.hpp
code/chainOfResponsibility/src/: main.cpp
code/chainOfResponsibility/uml/: chain_of_responsibility.drawio
code/decorator/: CMakeLists.txt
code/decorator/inc/: Car.hpp  (+4 more)
code/factoryMethod/: CMakeLists.txt
code/fascade/: CMakeLists.txt
code/flyweight/: CMakeLists.txt
code/observer/: CMakeLists.txt
code/prototype/: CMakeLists.txt
code/singleton/: CMakeLists.txt
code/visitor/: CMakeLists.txt
(+46 files in other folders)
